# asynchttp

./: .Rbuildignore  .gitignore  DESCRIPTION  Makefile  NAMESPACE  example.R
R/: extendr-wrappers.R  verbs.R
man/: set_header.Rd
src/: Makevars  Makevars.win  asynchttp-win.def  entrypoint.c
src/rust/: Cargo.toml
src/rust/src/: lib.rs
