[package]
name = 'asynchttp'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'asynchttp'

[dependencies]
extendr-api = { version = "0.7.0", features = ["serde"] }
rayon = "1.10.0"
serde_json = "1.0.128"
ureq = { version = "2.10.1", features = ["json"] }
